--- a/rlib/authordown/DESCRIPTION
+++ b/rlib/authordown/DESCRIPTION
@@ -10,21 +10,15 @@ Description: Manage author metadata and generate manuscript front matter,
     including title pages, acknowledgements, conflicts of interest, and
     contributions, with support for large author lists.
 License: AGPL-3
-URL: https://zh1peng.github.io/authordown, https://github.com/zh1peng/authordown
+URL: https://zh1peng.github.io/authordown,
+        https://github.com/zh1peng/authordown
 BugReports: https://github.com/zh1peng/authordown/issues
 Encoding: UTF-8
-Depends:
-    R (>= 3.5)
+Depends: R (>= 3.5)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: 
-    openxlsx,
-    rlang
-Suggests:
-    knitr,
-    pkgdown,
-    rmarkdown,
-    shiny,
-    testthat (>= 3.0.0)
+Imports: openxlsx, rlang
+Suggests: knitr, pkgdown, rmarkdown, shiny, testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+Built: R 4.4.1; ; 2026-01-22 08:21:32 UTC; windows
